# CAESAR

./: CAESARConfig.cmake.in  CAESAR_compressor.py  CAESAR_decompressor.py  CAESAR_hyper_decompressor.py  MODEL_CREATORS  README.md  env_gpu_nvcomp.sh  mac.patch  requirements.txt
.github/workflows/: cross-platform-test.yml
CAESAR/: CAESAR.cpp  CMakeLists.txt  data_utils.cpp  data_utils.h
CAESAR/dataset/: dataset.cpp  dataset.h
CAESAR/models/: array_utils.h  caesar_compress.cpp  caesar_compress.h  caesar_decompress.cpp  caesar_decompress.h  gpu_lossess.cpp  gpu_lossess.h  lbrc.cpp  lbrc.h  model_cache.h  model_utils.cpp  model_utils.h  nglr.cpp  nglr.h  nglr_model.cpp  nglr_model.h  nglr_train.cpp  nglr_train.h  runGaeCuda.cpp  runGaeCuda.h
CAESAR/models/range_coder/: rans64.h  rans_coder.cpp  rans_coder.hpp
CAESAR/tools/: caesar_nglr_train.cpp  nglr_train.h
CPU/: CPU_INSTALL.md  CPU_README.md  cpu_build.patch
GPU/: GPU_INSTALL.md  GPU_README.md  README.md  gpu.patch
dev/: C++_format.sh  python_format.sh
docs/: TODO.txt
pyCAESAR/: compressor.py  compressor_orig.py  dataset.py
pyCAESAR/models/: RangeEncoding.py  RangeEncoding_orig.py  compress_modules3d_mid_SR.py  keyframe_compressor.py  network_components.py  run_gae_cuda.py  utils.py  video_diffusion_interpo.py
pyCAESAR/models/BCRN/: bcrn_model.py  blocks.py
tests/: CMakeLists.txt  Eval_NGLR.py  NGLR_train.py  gen_data.py  testLBRC.cpp  testRunGaeCuda.cpp  test_NGLR.cpp  test_NGLR_mps.cpp  test_caesarC.cpp  test_caesarCD.cpp  test_caesarD.cpp  test_padding.cpp
